--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "1.0.0",
   "description": "音声合成用の音声収録デスクトップアプリケーション",
   "main": "dist-electron/index.js",
-  "type": "module",
-  "scripts": {
+  "type": "module",  "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build && npm run copy-preload && electron-builder",
+    "build-skip-tsc": "vite build && npm run copy-preload && electron-builder",
     "preview": "vite preview",
     "electron": "electron .",
     "electron:serve": "electron . --serve",
     "dist": "electron-builder",
-    "copy-preload": "cp electron/preload.cjs dist-electron/"
+    "copy-preload": "copy electron\\preload.cjs dist-electron\\"
   },
   "keywords": [
     "electron",
@@ -23,6 +23,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^22.15.21",
+    "@types/node-wav": "^0.0.4",
     "@vitejs/plugin-vue": "^5.2.4",
     "electron": "^36.3.1",
     "electron-builder": "^26.0.12",
@@ -36,6 +37,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "electron-store": "^10.0.1",
-    "element-plus": "^2.9.11"
+    "element-plus": "^2.9.11",
+    "node-wav": "^0.0.2"
   }
 }
