--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "electron": "electron .",
     "electron:serve": "electron . --serve",
     "dist": "electron-builder",
-    "copy-preload": "copyfiles -u 1 electron/preload.cjs dist-electron/"
+    "copy-preload": "copyfiles -u 1 electron/preload.cjs dist-electron/",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "keywords": [
     "electron",
@@ -26,13 +30,17 @@
     "@types/node": "^22.15.21",
     "@types/node-wav": "^0.0.4",
     "@vitejs/plugin-vue": "^5.2.4",
+    "@vitest/coverage-v8": "^3.1.4",
+    "@vue/test-utils": "^2.4.6",
     "copyfiles": "^2.4.1",
     "electron": "^36.3.1",
     "electron-builder": "^26.0.12",
+    "happy-dom": "^17.5.6",
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
     "vite-plugin-electron": "^0.29.0",
     "vite-plugin-electron-renderer": "^0.14.6",
+    "vitest": "^3.1.4",
     "vue": "^3.5.14",
     "vue-tsc": "^2.2.10"
   },
